Dropdown chips layout issue fix

--- a/angular-ui/src/app/component/useraction/useraction.component.css
+++ b/angular-ui/src/app/component/useraction/useraction.component.css
@@ -38,6 +38,19 @@
     white-space: nowrap;
     border: 0;
   }
+
+  .menu-container:after {
+    content: '';
+    position: absolute;
+    /* background: red; */
+    bottom: 27px;
+    width: 10px;
+    height: 10px;
+    right: -10px;
+    border-top: 5px solid transparent;
+    border-left: 10px solid #555;
+    border-bottom: 5px solid transparent;
+}
   img{
     float: right;
     padding-left: 10px;
